# flet_layoutbuilder

./: .gitignore  README.md  index.md  mkdocs.yml  pyproject.toml
docs/: FletLayoutbuilder.md  index.md
examples/flet_layoutbuilder_example/: pyproject.toml
examples/flet_layoutbuilder_example/src/: main.py
src/flet_layoutbuilder/: flet_layoutbuilder.py
src/flet_layoutbuilder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/flet_layoutbuilder/: README.md  pubspec.yaml
src/flutter/flet_layoutbuilder/lib/: flet_layoutbuilder.dart
src/flutter/flet_layoutbuilder/lib/src/: create_control.dart  flet_layoutbuilder.dart
